# advent-of-code-2024

./: .coverage  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini
advent_of_code_2024/: main.py
advent_of_code_2024/day_01/: main_01.py  main_02.py
advent_of_code_2024/day_02/: main_01.py  main_02.py
advent_of_code_2024/day_03/: input.txt  main_01.py  main_02.py
advent_of_code_2024/day_04/: main_01.py
advent_of_code_2024/day_05/: main_01.py  main_02.py
advent_of_code_2024/day_06/: main_01.py  main_02.py
advent_of_code_2024/day_07/: main_01.py  main_02.py
advent_of_code_2024/day_08/: main_01.py  main_02.py
advent_of_code_2024/day_09/: main_01.py
features/: environment.py
features/core/: day_01.feature
features/day_01/: exercise_02.feature
features/day_02/: exercise_01.feature  exercise_02.feature
features/day_03/: exercise_01.feature  exercise_02.feature
features/day_04/: exercise_01.feature  exercise_02.feature
features/day_05/: exercise_01.feature  exercise_02.feature
features/day_06/: exercise_01.feature  exercise_02.feature
features/day_07/: exercise_01.feature  exercise_02.feature
features/day_08/: exercise_01.feature  exercise_02.feature
features/day_09/: exercise_01.feature
features/steps/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
stack/docker/: .env  docker-compose.dev.yml
tests/day_01/: test_main_01.py
tests/day_02/: test_day_02.py
tests/day_03/: test_day_03.py
tests/day_04/: test_day_04.py
tests/day_05/: test_day_05.py
(+5 files in other folders)
