[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Mario Baldi <geek0x90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
questionary = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyright = "^1.1.389"
pylint = "^3.3.1"
coverage = "^7.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
